--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "aktiv grotesk", "sans-serif";
+    font-family: "aktiv grotesk", "Helvetica", "sans-serif";
     text-align: center
 }
 
@@ -10,6 +10,7 @@ h1 {
 }
 
 /*NAV------------------------------------------------------*/
+
 div.nav-menu {
     background-color: #000;
     padding: 0 20px;
@@ -146,14 +147,24 @@ clear: both;
 /*FOOTER-----------------------------------------------------*/
 #footer {
    left:0px;
-   bottom:0px;
    width:100%;
-   margin-top: 60%;
+   margin-top: 0%;
+    margin-bottom: 0%;
    background:#000;
    color: #fff;
    font-weight: lighter;
    font-size: 125%;
    font-style: italic;
+}
+
+#logo2 {
+    height: auto;
+    width: 10%;
+    margin-top: 10px;
+}
+
+#footerl {
+    text-align: left;
 }
 
 
