--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,6 +1,6 @@
 body {
     font-family: "aktiv grotesk", "Helvetica", "sans-serif";
-    text-align: center
+    text-align: center;
 }
 
 h1 {
@@ -12,9 +12,11 @@ h1 {
 /*NAV------------------------------------------------------*/
 
 div.nav-menu {
+ 
     background-color: #000;
     padding: 0 20px;
     text-align: center;
+    z-index: 5;
 }
 
 div.nav-menu ul {
@@ -99,11 +101,20 @@ clear: both;
     color: #fff;
     font-weight: lighter;
 }
+.overlay {
+   background:transparent; 
+   position:relative; 
+   width:100%;
+   height:200px; /* your iframe height */
+   top:200px;  /* your iframe height */
+   margin-top:-200px;  /* your iframe height */
+}
 
 #map {
     width: 100%; 
     border: none;
     margin-bottom: 0;
+    
 }
 
 /*WHAT TO DO-------------------------------------------------*/
@@ -146,15 +157,15 @@ clear: both;
 
 /*FOOTER-----------------------------------------------------*/
 #footer {
-   left:0px;
-   width:100%;
-   margin-top: 0%;
-    margin-bottom: 0%;
-   background:#000;
-   color: #fff;
-   font-weight: lighter;
-   font-size: 125%;
-   font-style: italic;
+    margin: 0;
+    bottom: 0;
+    width:100%;
+    height: 30%;
+    background:#000;
+    color: #fff;
+    font-weight: lighter;
+    font-size: 125%;
+    font-style: italic;
 }
 
 #logo2 {
@@ -162,14 +173,3 @@ clear: both;
     width: 10%;
     margin-top: 10px;
 }
-
-#footerl {
-    text-align: left;
-}
-
-
-
-
-
-
-
