--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,13 +1,9 @@
 body {
     font-family: "aktiv grotesk", "Helvetica", "sans-serif";
     text-align: center;
+    background-color: #000;
 }
 
-h1 {
-    padding-top: 42%;
-    text-align: center;
-    color: #fff;
-}
 
 /*NAV------------------------------------------------------*/
 
@@ -89,31 +85,23 @@ clear: both;
 }
 
 /*LOCATION---------------------------------------------------*/
-#locationbox {
-    background-color: #000;
-}
 
 #info {
-    padding-top: 0.25%;
+    margin-top: 42.5%;
     text-align: center;
+    margin-left: 25px;
+    margin-right: 25px;
     font-size: 130%;
-    padding-bottom: 2%;
     color: #fff;
-    font-weight: lighter;
-}
-.overlay {
-   background:transparent; 
-   position:relative; 
-   width:100%;
-   height:200px; /* your iframe height */
-   top:200px;  /* your iframe height */
-   margin-top:-200px;  /* your iframe height */
+    font-weight: normal;
 }
 
 #map {
     width: 100%; 
+    height: 40%;
     border: none;
     margin-bottom: 0;
+    pointer-events: none;
     
 }
 
@@ -122,24 +110,34 @@ clear: both;
     width: 100%;
     outline: none;
     font-size: 40px;
-    color: white;
+    color: #fff;
     cursor: pointer;
 }
 
 .activities {
     width: 100%;
+    color: #fff;
 }
 
 .hiddeninfo1, .hiddeninfo2, .hiddeninfo3, .hiddeninfo4 {
     display: none;
 }
 
+.link {
+    text-decoration: none;
+    color: #fff;
+}
+
+.link:hover {
+    color: #c4f1fa;
+}
 /*WEATHER----------------------------------------------------*/
 #forecast_embed {
-    height: 245px;
+    height: 220px;
     width: 100%;
     margin-left: 0;
     margin-right: 0;
+    background-color: #c4f1fa; 
 }
 
 /*GALLERY----------------------------------------------------*/
@@ -148,6 +146,7 @@ clear: both;
     padding-left: 1%;
     padding-right: 1%;
     margin-bottom: 2.5%;
+    margin-top: 2%;
 }
 
 /*HISTORY----------------------------------------------------*/
@@ -166,6 +165,20 @@ clear: both;
     font-weight: lighter;
     font-size: 125%;
     font-style: italic;
+}
+
+.scrollToTop{
+	width:100px; 
+	height:130px;
+	padding:10px; 
+	text-align:center; 
+	font-weight: bold;
+	color: #fff;
+	text-decoration: none;
+	position:static;
+	top:75px;
+	right:40px;
+	display:none;
 }
 
 #logo2 {
